...
            app:iconPadding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/GuestMenuTitle" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_see_performer_catalog"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
...
            app:iconPadding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_see_album_catalog" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_see_collectos"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
...
