...
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_see_album_catalog"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="236dp"
            android:layout_height="164dp"
            android:layout_marginStart="84dp"
            android:layout_marginTop="36dp"
            android:paddingStart="16dp"
...
